2008-01-03  Satoshi Nakagawa <artension@gmail.com>

	Refactoring NumberFormat.
	Based on a patch from Stefan Rusterholz.

2007-12-29  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, autoop masks should ignore case.

2007-12-28  Satoshi Nakagawa <artension@gmail.com>

	Added modes count check for safety.

==== LimeChat 0.14.2 ====

2007-12-27  Satoshi Nakagawa <artension@gmail.com>

	Changed to complete a target channel when sending raw commands.

2007-12-27  Satoshi Nakagawa <artension@gmail.com>

	Integrated the font panel handler to the preferences dialog.
	Because if it is the first responder of the window, the window cannot receive any key events.

2007-12-27  Satoshi Nakagawa <artension@gmail.com>

	Changed the url regex to disallow parentheses, brackets, braces and etc in the end.

2007-12-25  Satoshi Nakagawa <artension@gmail.com>

	Switched back log file names to '(channel)/(date)_(server).txt' style.

2007-12-23  Satoshi Nakagawa <artension@gmail.com>

	Fixed a nil access bug in old WebKit, when changing theme in log.rb.

2007-12-22  Satoshi Nakagawa <artension@gmail.com>

	Changed the default transcript directory to ~/Library/LimeChat/Transcripts.
	Changed transcripts filename from '(channel)/(date)_(server).txt' to '(server)/(channel)/(date).txt'.

2007-12-21  Satoshi Nakagawa <artension@gmail.com>

	Made the mode parser DRY.
	Refactoring around instance_variable_{get|set}.

2007-12-21  Satoshi Nakagawa <artension@gmail.com>

	Moved ISupportInfo into a separated file.

2007-12-20  Satoshi Nakagawa <artension@gmail.com>

	Added "Message scrollback" option.

2007-12-20  Satoshi Nakagawa <artension@gmail.com>

	Improved to avoid nick changing loop when a nick collision occurred.

2007-12-20  Satoshi Nakagawa <artension@gmail.com>

	Changed to parse RPL_ISUPPORT(005).
	Changed to use nickname length and modes count in the ISupportInfo.

2007-12-19  Satoshi Nakagawa <artension@gmail.com>
